2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	* data/dwell-click-applet.ui:
	
	Change the enable button to use a stock icon instead of the
	On/Off label.
	
	Use standard icon name. Bug #545059

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.4

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.4 release.

2009-01-05 Francesco Fumanti <frfumanti@svn.gnome.org>

	* data/pointer-capture-applet.schemas.in
	
	Improve short and long descriptions

2008-12-15 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Skipping the 2.25.3 release. Version bump to 2.25.4

2008-12-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.3

2008-12-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.2 release.

2008-11-13  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (global_motion_event): Make sure drag-clicks also
	work if both Dwell Click and Simulated Secondary Click are enabled.

2008-11-13  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (mt_main_generate_button_event): Fix typo and
	increase double click delay. (Helps changing directories in gftp)

2008-11-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	Change to new interface descriptions.
	
	* po/POTFILES.in: Use new .ui files
	* po/POTFILES.skip: Ignore old .glade files

2008-11-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.2

2008-11-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.1 release.

2008-10-23  Gerd Kohlberger  <gerdk@svn.gnome.org>
	
	Migrate to GtkBuilder and remove libglade dependency.

	* configure.ac: Remove libglade check.
	* src/mt-main.c:
	* src/mt-main.h:
	* src/mt-ctw.c:
	* src/mt-ctw.h:
	* src/dwell-click-applet.c:
	* src/pointer-capture-applet.c: Switch to GtkBuilder.