@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <interface>
-  <requires lib="gtk+" version="2.14"/>
+  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkUIManager" id="uimanager"/>
   <object class="GtkMenu" id="popup">
     <property name="visible">True</property>
@@ -10,8 +11,8 @@
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
     <property name="border_width">4</property>
     <property name="title" translatable="yes">Dwell Click Type</property>
-    <property name="icon_name">gnome-dev-mouse-optical</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="icon_name">input-mouse</property>
+    <property name="type_hint">dialog</property>
     <child>
       <object class="GtkHBox" id="box">
         <property name="visible">True</property>
@@ -22,9 +23,10 @@
           <object class="GtkRadioButton" id="single">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="relief">GTK_RELIEF_NONE</property>
-            <property name="image_position">GTK_POS_TOP</property>
+            <property name="relief">none</property>
+            <property name="image_position">top</property>
             <property name="active">True</property>
             <property name="draw_indicator">False</property>
             <child>
@@ -38,7 +40,7 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="yalign">1</property>
                     <property name="pixbuf">single-click.png</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                   <packing>
                     <property name="position">0</property>
@@ -66,9 +68,10 @@
           <object class="GtkRadioButton" id="double">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="relief">GTK_RELIEF_NONE</property>
-            <property name="image_position">GTK_POS_TOP</property>
+            <property name="relief">none</property>
+            <property name="image_position">top</property>
             <property name="draw_indicator">False</property>
             <property name="group">single</property>
             <child>
@@ -82,7 +85,7 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="yalign">1</property>
                     <property name="pixbuf">double-click.png</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                   <packing>
                     <property name="position">0</property>
@@ -110,9 +113,10 @@
           <object class="GtkRadioButton" id="drag">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="relief">GTK_RELIEF_NONE</property>
-            <property name="image_position">GTK_POS_TOP</property>
+            <property name="relief">none</property>
+            <property name="image_position">top</property>
             <property name="draw_indicator">False</property>
             <property name="group">single</property>
             <child>
@@ -126,7 +130,7 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="yalign">1</property>
                     <property name="pixbuf">drag-click.png</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                   <packing>
                     <property name="position">0</property>
@@ -154,9 +158,10 @@
           <object class="GtkRadioButton" id="right">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="relief">GTK_RELIEF_NONE</property>
-            <property name="image_position">GTK_POS_TOP</property>
+            <property name="relief">none</property>
+            <property name="image_position">top</property>
             <property name="draw_indicator">False</property>
             <property name="group">single</property>
             <child>
@@ -170,7 +175,7 @@
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="yalign">1</property>
                     <property name="pixbuf">right-click.png</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                   <packing>
                     <property name="position">0</property>
