@@ -1,5 +1,12 @@
 2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>
 
+	* data/pointer-capture-applet.ui:
+	* data/mousetweaks.ui:
+	
+	Use standard icon name. Bug #545059
+
+2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>
+
 	* src/dwell-click-applet.c:
 	* data/dwell-click-applet.ui:
 	
